examples/test/iptables.rules
### Filtering rules ###
*filter
# Default policy DROP in filtering chains
:FORWARD DROP [0:0]

# Requirement 1: Allow arbitrary traffic between network A and B
-A FORWARD -s 172.16.1.0/24 -d 172.16.2.0/24 -j ACCEPT
-A FORWARD -s 172.16.2.0/24 -d 172.16.1.0/24 -j ACCEPT

# Requirement 2: Allow SSH/HTTPS incoming traffic to the corresponding hosts
-A FORWARD -p tcp -d 172.16.2.15 --dport  22 -j ACCEPT
-A FORWARD -p tcp -d 172.16.1.15 --dport 443 -j ACCEPT

# Requirement 3: Allow HTTP/HTTPS outgoing traffic
-A FORWARD -s 172.16.1.0/24 -p tcp --dport 80  -j ACCEPT
-A FORWARD -s 172.16.2.0/24 -p tcp --dport 80  -j ACCEPT
-A FORWARD -s 172.16.1.0/24 -p tcp --dport 443 -j ACCEPT
-A FORWARD -s 172.16.2.0/24 -p tcp --dport 443 -j ACCEPT

COMMIT
